fix(sphere): fix scroll bug on tablet

--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -9,6 +9,7 @@ $zindex: (
     above-section: 20,
     section: 10,
     under-section: 9,
+    above-base: 2,
     base: 1,
 );
 
